# mcp-stdio-db-assistant

./: .env  .env.example  .gitignore  MCP_Prompt.txt  Mcp_server_api协议 2501ccfdb1ca80d2b378f42a265d56c3.md  README.en.md  README.md  README.zh-CN.md  client.py  pyproject.toml  request.py  server.py
